[Refactor] Removed unused modules: `speedy-commons`, `speedy-jooq-query-processor`, and `speedy-jpa-impl`, along with related classes, abstractions, and implementations. Cleaned up dependencies and configurations.